@@ -1,5 +1,10 @@
 2007-10-18  Sven Neumann  <sven@gimp.org>
 
+	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
+	introduced a utility function to retrieve the screen and monitor.
+
+2007-10-18  Sven Neumann  <sven@gimp.org>
+
 	* modules/colorsel_cmyk_lcms.c: ellipsize the profile label. If
 	possible, use the profile description as we do in other places.
 
